k8s/pod-portal-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: portal-server
  labels:
    app: portal-server
spec:
  containers:
  - name: portal-server
    image: local/portal-server
    imagePullPolicy: Never
