k8s/endpoint-ucs-local.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ucs-1
  labels:
    kubernetes.io/service-name: ucs
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      # Reachable IP Address of a UCS VM
      - "192.168.2.154"
    conditions:
      ready: true
