k8s/service-portal-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-frontend-service
spec:
  selector:
    app: portal-frontend
  ports:
    - protocol: TCP
      port: 80
