k8s/service-portal-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-server-service
spec:
  selector:
    app: portal-server
  ports:
    - protocol: TCP
      port: 80
