k8s/service-ucs.yaml
apiVersion: v1
kind: Service
metadata:
  name: ucs
spec:
  ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
