k8s/svc-backend.yaml
# SPDX-License-Identifier: AGPL-3.0-only
# SPDX-FileCopyrightText: 2023-2024 Univention GmbH

apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: univention-portal-backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
