k8s/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: univention-portal-frontend
  ports:
    - name: http-frontend
      protocol: TCP
      port: 8080
      targetPort: http-frontend
